# TP-Requests

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
TP_Requests/: __init__.py  http.py
