[build-system]
requires = ["setuptools<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tp-requests"
version = "2025.10.8"
description = "Send the HTTP/ MQTT/ WEBSOCKET Request"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
keywords = ["TPCyberSec", "TP_Requests", "TP_HTTP_REQUEST", "TP_MQTT_REQUEST", "TP_WEBSOCKET_REQUEST"]
classifiers = [
	"Programming Language :: Python :: 3"
]

authors = [
	{ name = "TP Cyber Security", email = "tpcybersec2023@gmail.com" }
]

dependencies = [
	"tp-http-request-response-parser>=2025.9.30"
]

[project.urls]
Homepage = "https://github.com/TPCyberSec/TP-Requests"

[tool.setuptools]
packages = ["tp_requests"]